--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,6 +22,16 @@
     <div class="container">
 
         <br />
+
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+
         {% block content %}
         {% endblock %}
 
