--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -17,10 +17,15 @@
                 {% else %}
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Login</a>
                 </li>
 
                 {% endif %}
+
             </ul>
         </div>
     </div>
